--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ style="width:100%;max-width:960px"></div>
 
 <p>This line is here to show how merging works.</p>
 <p> changes in file</p>
+<p> branch changes in github</p>
 
 </body>
 </html>
